@@ -115,4 +115,5 @@ BUGFIXES FROM BUGZILLA:
 089 ==> 365331 - digiKam not loading because rpath information missing from libQt5Qml, libQt5Script and libQt5Quick.
 090 ==> 377039 - Network Collections cause hang on "Reading Database".
 091 ==> 218819 - Implement albums tree-view colapse/expand history.
-092 ==> 
+092 ==> 377292 - Improve GPS Correlator UI
+093 ==>
